<resources>
    <string name="app_name">HeatIndex</string>
    <string name="eingabe">Eingabe</string>
    <string name="außentemp">Außentemperatur:</string>
    <string name="relative_luftfeuchtigkeit">relative Luftfeuchtigkeit: </string>
    <string name="heat_index_berechnen">HeatIndex</string>
    <string name="ergebnis">HeatIndex</string>
    <string name="ergebnis_title">Ergebnis</string>
    <string name="verlauf_title">Verlauf</string>
    <string name="info_title">Info</string>
    <string name="indexBetraegt">Der HeatIndex beträgt</string>
    <string name="leere_ausgabeseite_string">Gehen sie auf Eingabe um einen Heat Index zu berechnen</string>
    <string name="delete_content_description">Trash-Can</string>

    <!-- Einheiten -->
    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="string_percent">%</string>

    <!--Alertdialog Löschen -->
    <string name="eintrag_löschen_frage">Wollen sie diesen Eintrag wirklich löschen?</string>
    <string name="löschen_title">Löschen</string>
    <string name="abbruch_auswahl">Abbrechen</string>
    <string name="ja_auswahl">Ja</string>

    <!-- Warnhinweise -->
    <string name="warnung_1">Vorsicht – Bei längeren Zeiträumen und körperlicher Aktivität kann es zu Erschöpfungserscheinungen kommen.</string>
    <string name="warnung_2">Erhöhte Vorsicht – Es besteht die Möglichkeit von Hitzeschäden wie Sonnenstich, Hitzekrampf und Hitzekollaps.</string>
    <string name="warnung_3">Gefahr – Sonnenstich, Hitzekrampf und Hitzekollaps sind wahrscheinlich; Hitzschlag ist möglich.</string>
    <string name="warnung_4">Erhöhte Gefahr – Hitzschlag und Sonnenstich sind wahrscheinlich.</string>

    <string name="infoText1">Diese App soll durch die Parameter Temperatur und relative Luftfeuchtigkeit den sogenannten HeatIndex berechnen.


        </string>
    <string name="infoText2">Der Heat Index ist eine in Einheiten der Temperatur angegebene Größe zur Beschreibung der
        gefühlten Temperatur auf Basis der gemessenen Lufttemperatur sowie vor allem der relativen Luftfeuchtigkeit.
        Sie geht auf die Arbeiten des US-Amerikantikaners Robert G. Steadman
        aus dem Jahre 1979 zurück. Ähnlich, jedoch einfacher, wird der in Kanada entwickelte und häufiger anzutreffende Humindex (humidity index berchnet)</string>

    <string name="infoText3">Eine hohe Luftfeuchte wirkt, vor allem bei hoher Temperatur, also bei Schwüle,
        belastend auf den Organismus der Menschen und aller Säugetiere.
        Sie behindert die Thermoregulation des Körpers durch Schweißabsonderung der Haut,
        beeinträchtigt so deren subjektives Wohlbefinden und erhöht objektiv die Gefahr eines Hitzeschadens.
        Infolgedessen ist für Menschen ein Aufenthalt in der Wüste meist leichter zu verkraften
        als im Tropischen Regenwald mit dessen geringerer Temperatur, aber wesentlich höherer Luftfeuchte.
        Deshalb wird der HeatIndex gewöhnlicherweise nur für Außentemperaturen zwischen 27 und 43°C oder 80 und 110°F berechnet </string>

    <string name="formel">Die Formel zur Berechnung des HeatIndex lautet:\nHI = c₁ + c₂T + c₃φ +
        c₄Tφ + c₅T² + c₆φ² + c₇T²φ + c₈Tφ² + c₉T²φ²\ndabei steht T für die
        Temperatur und φ für die relative Luftfeuchtigkeit.
        c₁ bis c₉ sind Konstanten die abhängig von der verwendeten Temperatureinheit sind:</string>

    <string name="zusatzinfos"></string>
    <string name="konstanten_tabelle">Konstanten Tabelle</string>

    <string name="info_source">Quellen:</string>
    <string name="info_source1">https://de.wikipedia.org/wiki/Hitzeindex</string>
    <string name="info_source2">https://www.weather.gov/ama/heatindex</string>

</resources>
