<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:clickable="true"
    android:background="@drawable/bgn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/verlauf_item_shape"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoText1"
                android:textSize="20sp"
                android:gravity="start"
                android:padding="7dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formel"
                android:textSize="20sp"
                android:gravity="start"
                android:padding="7dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table"
                android:contentDescription="@string/konstanten_tabelle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoText2"
                android:textSize="20sp"
                android:gravity="start"
                android:padding="7dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoText3"
                android:textSize="20sp"
                android:gravity="start"
                android:padding="7dp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>
    </ScrollView>
</FrameLayout>