<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AusgabeFragment"
    android:clickable="true"
    android:background="@drawable/bgn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/verlauf_item_shape"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/ausgabe_eingegebene_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/außentemp"
            android:textSize="18sp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/ausgabe_eingegebene_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/relative_luftfeuchtigkeit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ausgabe_ergebnis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            tools:text="HeatIndex" />

        <TextView
            android:id="@+id/heatInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>

</FrameLayout>